modify : delete Jwt Token logic